--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,14 @@
     margin: 0;
     box-sizing: border-box;
 }
+/* General styles */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #2980B9
+}
 /* Header */
 header {
     background-color: #A2D9CE;
@@ -11,6 +19,7 @@ header {
 /* Main content */
 main {
     background-color: #F5B7B1;
+    flex: 1 0 auto;
 }
 /* Footer */
 footer {
