Create navigation section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,11 @@ header {
     background-color: #A2D9CE;
 }
 
+/* Logo and navigation bar */
+#logo {
+    
+}
+
 /* Main content */
 main {
     background-color: #F5B7B1;
