Add stile to header (h1 and a), remove link underline

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,9 +21,19 @@ header {
     background-color: #ffffff;
     padding: 0 1rem;
     position: fixed;
-    z-index: 99%;
+    z-index: 99;
     width: 100%;
     box-shadow: 0 2px 3px #1C2833;
+}
+
+header a {
+    text-decoration: none;
+    color: inherit;
+}
+
+h1 {
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
 
 /* Logo and navigation bar */
