--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ h1 {
     letter-spacing: 2px;
 }
 
-/* Logo and navigation bar */
+/* Navigation bar */
  #menu {
     font-size: 110%;
     letter-spacing: 3px;
@@ -50,6 +50,19 @@ h1 {
  .active {
     text-decoration: underline;
  }
+
+ /* Nav bar dropdown toggle */
+nav {
+    position: absolute;
+    background-color: #ffffff;
+    width: 100%;
+    left: 0;
+    padding: 0 1rem;
+    box-shadow: 0 2px 3px #1C2833;
+    display: none;
+    
+}
+
 
 /* Main content */
 main {
