--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,8 +99,6 @@ footer {
         position: relative;
         box-shadow: none;
         width: fit-content;
-        padding-right: 1rem;
-
     }
     #menu {
         display: flex;
@@ -110,6 +108,16 @@ footer {
     }
     .nav-toggle-label {
         display: none;
+    }
+    #logo {
+        font-size: 280%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+
+    /* Main content */
+    main {
+        margin-top: 75px;
     }
 
 }
