--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
     margin: 0;
     box-sizing: border-box;
 }
+
 /* General styles */
 body {
     min-height: 100vh;
@@ -17,7 +18,9 @@ body {
     font-family: 'Roboto Mono', sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     text-transform: uppercase;
     letter-spacing: 2px;
 }
@@ -41,21 +44,21 @@ header a {
 }
 
 /* Navigation bar */
- #menu {
+#menu {
     font-size: 110%;
     letter-spacing: 3px;
     list-style-type: none;
- }
+}
 
- #menu > li {
+#menu>li {
     margin-bottom: 0.5em;
- }
+}
 
- .active {
+.active {
     text-decoration: underline;
- }
+}
 
- /* Navbar dropdown toggle */
+/* Navbar dropdown toggle */
 nav {
     position: absolute;
     background-color: #ffffff;
@@ -72,7 +75,7 @@ nav {
 #nav-toggle:checked~nav {
     display: block;
 }
- 
+
 #nav-toggle {
     display: none;
 }
@@ -129,8 +132,19 @@ main {
     font-size: 2rem;
 }
 
+/* Media query: tablets and larger (576px and up) */
+@media screen and (min-width: 576px) {
+
+    /* Gallery page */
+    #photos {
+        column-count: 2;
+        column-gap: 5px;
+    }
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+
     /* Header */
     nav {
         display: block;
@@ -138,15 +152,19 @@ main {
         box-shadow: none;
         width: fit-content;
     }
+
     #menu {
         display: flex;
     }
-    #menu > li {
+
+    #menu>li {
         padding-left: 1rem;
     }
+
     .nav-toggle-label {
         display: none;
     }
+
     #logo {
         font-size: 280%;
         line-height: 75px;
@@ -157,20 +175,28 @@ main {
     main {
         margin-top: 75px;
     }
+
     /* Lanscape section */
     #cover-text {
         left: 50px;
         width: 350px;
-        
+    }
+
+    /* Gallery page */
+    #photos {
+        column-count: 3;
     }
 }
 
 /* Media query: laptop and larger (992px and up) */
 @media screen and (min-width: 992px) {
-    
+
     /* Header */
     #menu a:hover {
         text-decoration: underline;
     }
+    /* Gallery page */
+    #photos {
+        column-count: 4;
+    }
 }
-    
