--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,7 @@ body {
     font-family: 'Roboto Mono', sans-serif;
 }
 
-h1,
-h2,
-h3 {
+h1, h2, h3 {
     text-transform: uppercase;
     letter-spacing: 2px;
 }
@@ -125,21 +123,73 @@ main {
     background-image: url("../images/pexels-miss-zwiespalt-5948374.jpg");
     background-size: cover;
     background-position: 75%;
+    padding: 10%;
     flex-grow: 1;
 }
-    /* Form */
-#contact-form, #submit {
-    background-color: rgba(26, 23, 23, 0.4);
+
+#contact>h2 {
+    background-color: rgba(26, 23, 23, 0.7);
     color: #ffffff;
-    padding: 30px;
+    padding: 20px;
+    text-align: center;
 }
 
-#contact-form > h2, #submit > h2 {
-    margin-bottom: 20px;
+    /* Form */
+form {
+    margin: 20px 0;
+}
+#contact-form, #upload-form {
+    background-color: rgba(26, 23, 23, 0.7);
+    color: #ffffff;
+    padding: 10px;
+}
+
+#contact-form>h3, #upload-form>h3 {
+    margin-bottom: 10px;
 }
 
 .text-input {
-    
+    font-family: inherit;
+    color: #ffffff;
+    background-color: transparent;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    padding: 5px;
+}
+::placeholder {
+    color: #ffffff;
+}
+
+#password {
+    margin-bottom: 0;
+ }
+
+.submit-button {
+    font-family: inherit;
+    color: #ffffff;
+    background-color: #D98880;
+    border-radius: 5px;
+    padding: 0 10px 3px 10px;
+    height: 30px;
+    margin-top: 20px;
+}
+
+#file {
+    position: relative;
+    display: block;
+    padding: 0 0 0 3px;
+    width: 100%;
+    background-color: ;
+}
+
+::file-selector-button {
+    font-family: inherit;
+    color: #0c0b0b;
+    position: relative;
+    margin-top: 3px;
 }
 
 /* Footer */
@@ -210,6 +260,16 @@ main {
     #photos {
         column-count: 3;
     }
+    /* Contact page */
+    #contact {
+        background-position: 100%;
+    }
+
+    #contact-form, #upload-form, #contact>h2 {
+        max-width: 400px;
+        left: 10%;
+        top: 150px
+    }
 }
 
 /* Media query: laptop and larger (992px and up) */
@@ -223,4 +283,5 @@ main {
     #photos {
         column-count: 4;
     }
+
 }
