--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,7 @@ main {
     width: 100%;
     background: url(../images/pexels-gaurav-singh-18776804.jpg) no-repeat 65% 45%/cover;
     position: relative;
+    margin-top: -10px;
 }
 
 #cover-text {
@@ -299,7 +300,6 @@ form {
 
     /* Contact page */
     #contact {
-        background-position-x: 100%;
         background-position-y: 18%;
     }
 }
