--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ header a {
     list-style-type: none;
 }
 
-#menu>li {
+#menu li {
     margin-bottom: 0.5em;
 }
 
@@ -108,8 +108,11 @@ main {
 }
 
 /* About page */
-#content {
+#about {
     background-color: rgba(19, 137, 137, 0.4);
+}
+
+#content {
     position: relative;
     width: 100%;
     padding: 20px;
@@ -118,7 +121,7 @@ main {
 #swh-logo {
     height: 50px;
     width: 50px;
-    margin: 10px; 
+    margin: 10px;
 }
 
 .text-about {
@@ -127,16 +130,33 @@ main {
     padding: 20px;
 }
 
-.text-about >p {
+.text-about p {
     padding-top: 10px;
 }
 
-.text-about > h4 {
+.text-about h4 {
     text-transform: uppercase;   
 }
 
 #our-job, #our-team {
     background-color: #ffffff;
+}
+
+#contacts {    
+    text-align: center;
+    letter-spacing: 2px;
+    list-style-type: none;
+    margin-bottom: 20px;
+}
+
+.contact-info {
+    text-decoration: none;
+    color: #1C2833;
+    padding: 10px;
+}
+
+#map {
+    border-style: none;
 }
 
 /* Gallery page*/
@@ -153,7 +173,7 @@ main {
     flex-grow: 1;
 }
 
-#contact>h2 {
+#contact h2 {
     background-color: rgba(26, 23, 23, 0.7);
     color: #ffffff;
     padding: 20px;
@@ -170,7 +190,7 @@ form {
     padding: 10px;
 }
 
-#contact-form>h3, #upload-form>h3 {
+#contact-form h3, #upload-form h3 {
     margin-bottom: 10px;
 }
 
@@ -261,7 +281,7 @@ form {
         display: flex;
     }
 
-    #menu>li {
+    #menu li {
         padding-left: 1rem;
     }
 
@@ -293,7 +313,7 @@ form {
     }
     
     /* Contact page */
-    #contact-form, #upload-form, #contact>h2 {
+    #contact-form, #upload-form, #contact h2 {
         max-width: 400px;
         left: 10%;
         top: 150px
