--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* Google fonts import */
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 /* Asterisk wildcard selector to override default styles addes by the browser */
 * {
@@ -13,11 +13,13 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    color: #1C2833;
-    font-family: 'Roboto Mono', sans-serif;
+    color: #1c2833;
+    font-family: "Roboto Mono", sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     text-transform: uppercase;
     letter-spacing: 2px;
 }
@@ -29,7 +31,7 @@ header {
     position: fixed;
     z-index: 99;
     width: 100%;
-    box-shadow: 0 2px 3px #1C2833;
+    box-shadow: 0 2px 3px #1c2833;
     display: flex;
     justify-content: space-between;
     align-items: baseline;
@@ -62,7 +64,7 @@ nav {
     width: 100%;
     left: 0;
     padding: 0 1rem;
-    box-shadow: 0 2px 3px #1C2833;
+    box-shadow: 0 2px 3px #1c2833;
     display: none;
     top: 100%;
     letter-spacing: 1px;
@@ -93,7 +95,7 @@ main {
 #landscape {
     height: 85vh;
     width: 100%;
-    background: url(../images/index.webp) no-repeat 65% 45%/cover;
+    background: url(../images/index.webp) no-repeat 65% 45% / cover;
     position: relative;
     margin-top: -10px;
 }
@@ -135,23 +137,31 @@ main {
 }
 
 .text-about h4 {
-    text-transform: uppercase;   
+    text-transform: uppercase;
 }
 
-#our-job, #our-team {
+#our-job,
+#our-team {
     background-color: #ffffff;
 }
 
-#contact-details {    
+#contact-details {
     text-align: center;
     letter-spacing: 2px;
     list-style-type: none;
     margin-bottom: 40px;
+    color: #1c2833;
+    text-decoration: none;
+}
+
+#contact-details li {
+    color: #1c2833;
+    text-decoration: none;
 }
 
 iframe {
     border-style: none;
-    height: 400px;
+    height: 300px;
 }
 
 /* Gallery page*/
@@ -160,7 +170,7 @@ iframe {
 }
 
 /* Contact page */
-#contact{
+#contact {
     background-image: url("../images/contact.webp");
     background-size: cover;
     background-position: 75%;
@@ -179,13 +189,16 @@ iframe {
 form {
     margin: 20px 0;
 }
-#contact-form, #upload-form {
+
+#contact-form,
+#upload-form {
     background-color: rgba(26, 23, 23, 0.7);
     color: #ffffff;
     padding: 10px;
 }
 
-#contact-form h3, #upload-form h3 {
+#contact-form h3,
+#upload-form h3 {
     margin-bottom: 10px;
 }
 
@@ -200,13 +213,14 @@ form {
     border-radius: 5px;
     padding: 5px;
 }
+
 ::placeholder {
     color: #ffffff;
 }
 
 #password {
     margin-bottom: 0;
- }
+}
 
 .submit-button {
     font-family: inherit;
@@ -230,7 +244,7 @@ form {
 
 ::file-selector-button {
     font-family: inherit;
-    color: #241e1e;;
+    color: #241e1e;
     position: relative;
     margin-top: 3px;
     border-radius: 5px;
@@ -306,12 +320,14 @@ form {
     #photos {
         column-count: 3;
     }
-    
+
     /* Contact page */
-    #contact-form, #upload-form, #contact h2 {
+    #contact-form,
+    #upload-form,
+    #contact h2 {
         max-width: 400px;
         left: 10%;
-        top: 150px
+        top: 150px;
     }
 }
 
@@ -322,6 +338,7 @@ form {
     #menu a:hover {
         text-decoration: underline;
     }
+
     /* Gallery page */
     #photos {
         column-count: 4;
