change background color about another green

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,7 @@ main {
 
 /* About page */
 #about {
-    background-color: rgba(19, 137, 137, 0.4);
+    background-color: #a3cbc1;
 }
 
 #content {
