--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,9 @@ body {
     font-family: "Roboto Mono", sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     text-transform: uppercase;
     letter-spacing: 2px;
 }
